tests/specs/ecosystem/bureaudouble_forks/floating_ui_react_dom/0_0_1.test
bureaudouble-forks/floating-ui-react-dom/0.0.1
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --

error: TS2304 [ERROR]: Cannot find name 'Element'.
   */ element: React.MutableRefObject<Element | null> | Element | null;
                                      ~~~~~~~
    at file://<tmpdir>/src/arrow.ts:7:39

TS2304 [ERROR]: Cannot find name 'Element'.
   */ element: React.MutableRefObject<Element | null> | Element | null;
                                                        ~~~~~~~
    at file://<tmpdir>/src/arrow.ts:7:57

TS2552 [ERROR]: Cannot find name 'Element'. Did you mean 'Elements'?
export type ReferenceType = Element | VirtualElement;
                            ~~~~~~~
    at file://<tmpdir>/src/types.ts:15:29

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
         */ floating: React.MutableRefObject<HTMLElement | null>;
                                             ~~~~~~~~~~~
    at file://<tmpdir>/src/types.ts:32:46

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
         */ setFloating: (node: HTMLElement | null) => void;
                                ~~~~~~~~~~~
    at file://<tmpdir>/src/types.ts:38:33

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
    floating: HTMLElement | null;
              ~~~~~~~~~~~
    at file://<tmpdir>/src/types.ts:42:15

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
       */ whileElementsMounted?: (reference: RT, floating: HTMLElement, update: () => void) => () => void;
                                                           ~~~~~~~~~~~
    at file://<tmpdir>/src/types.ts:50:60

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
    floating?: HTMLElement | null;
               ~~~~~~~~~~~
    at file://<tmpdir>/src/types.ts:53:16

Found 8 errors.

